[project]
name = "ai-agent-scratch-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langchain-anthropic>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]
