[project]
name = "ai-agent-scratch-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpt4all>=2.8.2",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]
